# doron

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md  cli.md  db-contents.md  implementation-guide.md  kuzu-notes.md  mission-lifecycle.md  model-routing.md  tooling-contracts.md
scripts/: dev.sh  setup.sh
src/agent_platform/: __init__.py
src/agent_platform.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/agent_platform/agent/: __init__.py  factory.py  prompts.py
src/agent_platform/api/: __init__.py  app.py  db.py  sessions.py
src/agent_platform/application/: context_compression.py  db_snapshot_service.py  graph_snapshot_service.py  live_events.py  maintenance_runner.py  memory_manager.py  mission_service.py  output_schema.py  research_graph_manager.py  result_validation.py  runtime_builder.py  session_service.py
tests/: test_api_streaming.py  test_browser_extraction.py  test_browser_runtime.py  test_cli.py  test_cli_api_client.py  test_config_loader.py  test_context_compression.py  test_db_snapshot_api.py  test_db_snapshot_service.py  test_docs_lookup.py  test_graph_snapshot_service.py  test_kuzu_client.py  test_live_events.py  test_logging.py  test_maintenance_runner.py  test_memory_manager.py  test_memory_runtime.py  test_mission_timeout.py  test_output_contract.py  test_recoverable_tools.py  test_research_graph_manager.py  test_result_validation.py  test_serialization.py  test_session_api.py  test_trace_store.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.jsx  GraphPanel.jsx  styles.css
(+36 files in other folders)
