[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-platform"
version = "0.1.0"
description = "Generic agent platform built around pydantic-ai, Kuzu, Playwright, and OpenRouter."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Yaniv" }]
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jsonschema>=4.23.0",
  "kuzu>=0.8.0",
  "playwright>=1.53.0",
  "pydantic>=2.8.0",
  "pydantic-ai-slim[openrouter]>=0.0.24",
  "python-dotenv>=1.0.1",
  "typing-extensions>=4.12.2",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.8",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
